--- a/package.json
+++ b/package.json
@@ -1,57 +1,69 @@
 {
-  "name": "penguin-ui",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint-project": "bunx biome check --write .",
-    "lint-source": "bunx biome check --write ./src",
-    "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "dependencies": {
-    "@tailwindcss/cli": "^4.1.4",
-    "@tailwindcss/vite": "^4.1.4",
-    "ajv": "^8.17.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^4.1.4",
-    "vite-plugin-dts": "^4.5.3"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@chromatic-com/storybook": "3",
-    "@eslint/js": "^9.22.0",
-    "@storybook/addon-essentials": "8.6.12",
-    "@storybook/addon-onboarding": "8.6.12",
-    "@storybook/blocks": "8.6.12",
-    "@storybook/experimental-addon-test": "8.6.12",
-    "@storybook/react": "8.6.12",
-    "@storybook/react-vite": "8.6.12",
-    "@storybook/test": "8.6.12",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react-swc": "^3.8.0",
-    "@vitest/browser": "^3.1.2",
-    "@vitest/coverage-v8": "^3.1.2",
-    "eslint": "^9.22.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-storybook": "^0.12.0",
-    "globals": "^16.0.0",
-    "playwright": "^1.52.0",
-    "storybook": "8.6.12",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1",
-    "vitest": "^3.1.2"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
-  }
+	"name": "penguin-ui",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"types": "dist/index.d.ts",
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"import": "./dist/penguin-ui.es.js",
+			"require": "./dist/penguin-ui.umd.js"
+		},
+		"./styles.css": {
+			"require": "./dist/styles.css",
+			"default": "./dist/styles.css"
+		}
+	},
+	"files": ["dist"],
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build && bun run build-styles",
+		"build-styles": "tailwindcss -m -i ./src/index.css -o ./dist/styles.css",
+		"lint-project": "bunx biome check --write .",
+		"lint-source": "bunx biome check --write ./src",
+		"preview": "vite preview",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
+	},
+	"dependencies": {
+		"@tailwindcss/cli": "^4.1.4",
+		"@tailwindcss/vite": "^4.1.4",
+		"ajv": "^8.17.1",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwindcss": "^4.1.4",
+		"vite-plugin-dts": "^4.5.3"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@chromatic-com/storybook": "3",
+		"@eslint/js": "^9.22.0",
+		"@storybook/addon-essentials": "8.6.12",
+		"@storybook/addon-onboarding": "8.6.12",
+		"@storybook/blocks": "8.6.12",
+		"@storybook/experimental-addon-test": "8.6.12",
+		"@storybook/react": "8.6.12",
+		"@storybook/react-vite": "8.6.12",
+		"@storybook/test": "8.6.12",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
+		"@vitejs/plugin-react-swc": "^3.8.0",
+		"@vitest/browser": "^3.1.2",
+		"@vitest/coverage-v8": "^3.1.2",
+		"eslint": "^9.22.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
+		"eslint-plugin-storybook": "^0.12.0",
+		"globals": "^16.0.0",
+		"playwright": "^1.52.0",
+		"storybook": "8.6.12",
+		"typescript": "~5.7.2",
+		"typescript-eslint": "^8.26.1",
+		"vite": "^6.3.1",
+		"vitest": "^3.1.2"
+	},
+	"eslintConfig": {
+		"extends": ["plugin:storybook/recommended"]
+	}
 }
