--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build"
 	},
+	"peerDependencies": {
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
+	},
 	"dependencies": {
 		"@tailwindcss/cli": "^4.1.4",
 		"@tailwindcss/vite": "^4.1.4",
 		"ajv": "^8.17.1",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
+
 		"tailwindcss": "^4.1.4",
 		"vite-plugin-dts": "^4.5.3"
 	},
