--- a/package.json
+++ b/package.json
@@ -34,9 +34,15 @@
 		"@tailwindcss/cli": "^4.1.4",
 		"@tailwindcss/vite": "^4.1.4",
 		"ajv": "^8.17.1",
-
 		"tailwindcss": "^4.1.4",
-		"vite-plugin-dts": "^4.5.3"
+		"vite-plugin-dts": "^4.5.3",
+		"@radix-ui/react-checkbox": "^1.1.2",
+		"@radix-ui/react-dialog": "^1.1.7",
+		"@radix-ui/react-select": "^2.1.1",
+		"@radix-ui/react-slot": "^1.1.0",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.453.0",
+		"tailwind-merge": "^2.5.4"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
@@ -60,6 +66,7 @@
 		"eslint-plugin-storybook": "^0.12.0",
 		"globals": "^16.0.0",
 		"playwright": "^1.52.0",
+		"postcss": "^8.5.3",
 		"storybook": "8.6.12",
 		"typescript": "~5.7.2",
 		"typescript-eslint": "^8.26.1",
